# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/test_helper.gni")

config("lsp_benchmark_config") {
  # Use an absolute host path so benchmarks can be run from any working directory.
  cases_dir = get_path_info(
          "//arkcompiler/ets_frontend/ets2panda/test/unit/lsp/benchmark/cases",
          "abspath")

  # internal_api::Initializer uses BUILD_FOLDER to resolve $ORIGIN/arktsconfig.json.
  # For host benchmarks under GN, point it to the host frontend output directory.
  benchmark_build_folder =
      get_path_info("$root_out_dir/arkcompiler/ets_frontend", "abspath")
  defines = [
    "CASES_DIR=\"$cases_dir\"",
    "BUILD_FOLDER=\"$benchmark_build_folder\"",
  ]
  include_dirs = [
    "${root_gen_dir}/arkcompiler/ets_frontend/ets2panda",
    "//arkcompiler/runtime_core/static_core/assembler",
    "${root_gen_dir}/arkcompiler/runtime_core/static_core/assembler",
  ]
  if (current_toolchain != default_toolchain) {
    include_dirs += [
      "$root_out_dir/../gen/arkcompiler/ets_frontend/ets2panda",
      "$root_out_dir/../gen/arkcompiler/runtime_core/static_core/assembler",
    ]
  }
}

template("ets2panda_lsp_benchmark_unittest") {
  host_unittest_action(target_name) {
    use_exceptions = true
    testonly = true
    sources = invoker.sources + [ "src/lspMemoryManager.cpp" ]

    configs = [
      "//build/config/components/runtime_core/static_core:ark_common_config",
      "//arkcompiler/ets_frontend/ets2panda:libes2panda_public_config",
      "//arkcompiler/ets_frontend/ets2panda:libes2panda_config",
    ]
    if (defined(invoker.configs)) {
      configs += invoker.configs
    }

    include_dirs = [
      "//arkcompiler/ets_frontend/ets2panda",
      "${target_out_dir}",
    ]
    if (defined(invoker.include_dirs)) {
      include_dirs += invoker.include_dirs
    }

    if (defined(invoker.deps)) {
      deps = invoker.deps
    }

    if (defined(invoker.external_deps)) {
      external_deps = invoker.external_deps
    } else {
      external_deps = [
        "googletest:gtest_main",
        "icu:static_icuuc",
        "json:nlohmann_json_static",
        "runtime_core:arkabc2program_public_headers",
        "runtime_core:arkassembler_public_headers",
        "runtime_core:arkbase_public_headers",
        "runtime_core:arkfile_public_headers",
        "runtime_core:libpandabase_headers",
        sdk_libc_secshared_dep,
      ]
    }

    module_out_path = "arkcompiler/ets_frontend"
  }
}

lsp_benchmark_test_cases = [
  {
    name = "lsp_start_perf"
    source = "src/start_perf.cpp"
  },
  {
    name = "lsp_get_definition_at_position_perf"
    source = "src/get_definition_at_position_perf.cpp"
  },
  {
    name = "lsp_find_rename_locations_perf"
    source = "src/find_rename_locations_perf.cpp"
  },
  {
    name = "lsp_to_line_column_offset_perf"
    source = "src/to_line_column_offset_perf.cpp"
  },
  {
    name = "lsp_get_completion_at_position_perf"
    source = "src/get_completion_at_position_perf.cpp"
  },
  {
    name = "lsp_get_document_high_lights_perf"
    source = "src/get_document_high_lights_perf.cpp"
  },
  {
    name = "lsp_get_formatting_edits_perf"
    source = "src/get_formatting_edits_perf.cpp"
  },
  {
    name = "lsp_get_offset_by_col_and_line_perf"
    source = "src/get_offset_by_col_and_line_perf.cpp"
  },
  {
    name = "lsp_get_organize_imports_perf"
    source = "src/get_organize_imports_perf.cpp"
  },
  {
    name = "lsp_get_quick_info_at_position_perf"
    source = "src/get_quick_info_at_position_perf.cpp"
  },
  {
    name = "lsp_get_references_at_position_perf"
    source = "src/get_references_at_position_perf.cpp"
  },
  {
    name = "lsp_get_rename_info_perf"
    source = "src/get_rename_info_perf.cpp"
  },
  {
    name = "lsp_refactor_extract_symbol_perf"
    source = "src/refactor_extract_symbol_perf.cpp"
  },
  {
    name = "lsp_get_implementation_location_perf"
    source = "src/get_implementation_location_perf.cpp"
  },
  {
    name = "lsp_get_syntactic_diagnostics_perf"
    source = "src/get_syntactic_diagnostics_perf.cpp"
  },
  {
    name = "lsp_get_semantic_diagnostics_perf"
    source = "src/get_semantic_diagnostics_perf.cpp"
  },
  {
    name = "lsp_get_safe_delete_info_perf"
    source = "src/get_safe_delete_info_perf.cpp"
  },
  {
    name = "lsp_get_current_token_value_perf"
    source = "src/get_current_token_value_perf.cpp"
  },
]

lsp_benchmark_target_configs = [
  "//arkcompiler/ets_frontend/ets2panda/lsp:libes2panda_lsp_config",
  ":lsp_benchmark_config",
]

lsp_benchmark_target_include_dirs = [
  "include",
  "../benchmark",
  "../../../../lsp/include",
  "../../../../public",
  "../../../../",
]

lsp_benchmark_target_deps = [
  "//arkcompiler/ets_frontend/ets2panda/lsp:libes2panda_lsp_static",
  "//third_party/benchmark:benchmark",
]

group("lsp_benchmark") {
  testonly = true
  deps = []
  foreach(test_case, lsp_benchmark_test_cases) {
    deps += [ ":${test_case.name}" ]
  }
}

foreach(test_case, lsp_benchmark_test_cases) {
  ets2panda_lsp_benchmark_unittest(test_case.name) {
    sources = [ test_case.source ]
    configs = lsp_benchmark_target_configs
    include_dirs = lsp_benchmark_target_include_dirs
    deps = lsp_benchmark_target_deps
  }
}
