# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/test_helper.gni")

config("lsp_benchmark_config") {
  cases_dir = get_path_info(
          "//arkcompiler/ets_frontend/ets2panda/test/unit/lsp/benchmark/cases",
          "abspath")
  benchmark_build_folder =
      get_path_info("$root_out_dir/arkcompiler/ets_frontend", "abspath")
  defines = [
    "BENCHMARK_STATIC_DEFINE",
    "CASES_DIR=\"$cases_dir\"",
    "BUILD_FOLDER=\"$benchmark_build_folder\"",
  ]
  include_dirs = [
    "${root_gen_dir}/arkcompiler/ets_frontend/ets2panda",
    "${root_gen_dir}/arkcompiler/runtime_core/static_core",
    "//arkcompiler/runtime_core/static_core/assembler",
    "${root_gen_dir}/arkcompiler/runtime_core/static_core/assembler",
  ]
  if (current_toolchain != default_toolchain) {
    include_dirs += [
      "$root_out_dir/../gen/arkcompiler/ets_frontend/ets2panda",
      "$root_out_dir/../gen/arkcompiler/runtime_core/static_core",
      "$root_out_dir/../gen/arkcompiler/runtime_core/static_core/assembler",
    ]
  }
}

template("ets2panda_lsp_benchmark_executable") {
  ohos_executable(target_name) {
    use_exceptions = true
    sources = invoker.sources + [
      "src/lspMemoryManager.cpp",
      "src/lsp_benchmark_utils.cpp",
    ]
    output_name = invoker.output_name

    configs = [
      "//build/config/components/runtime_core/static_core:ark_common_config",
      "//arkcompiler/ets_frontend/ets2panda:libes2panda_public_config",
      "//arkcompiler/ets_frontend/ets2panda:libes2panda_config",
      "//arkcompiler/ets_frontend/ets2panda/lsp:libes2panda_lsp_config",
      ":lsp_benchmark_config",
    ]

    include_dirs = [
      "//arkcompiler/ets_frontend/ets2panda",
      "${target_out_dir}",
      "include",
      "../benchmark",
      "../../../../lsp/include",
      "../../../../public",
      "../../../../",
    ]

    deps = [ "//arkcompiler/ets_frontend/ets2panda/lsp:libes2panda_lsp_static" ]
    external_deps = [
      "benchmark:benchmark",
      "icu:static_icuuc",
      "json:nlohmann_json_static",
      "runtime_core:arkabc2program_public_headers",
      "runtime_core:arkassembler_public_headers",
      "runtime_core:arkbase_public_headers",
      "runtime_core:arkfile_public_headers",
      "runtime_core:libpandabase_headers",
      sdk_libc_secshared_dep,
    ]

    libs = platform_libs
    ldflags = platform_ldflags
    if (is_linux) {
      libs += [ "stdc++fs" ]
    }

    install_enable = false
    part_name = "ets_frontend"
    subsystem_name = "arkcompiler"
  }
}

lsp_benchmark_build_deps = []

if (current_toolchain == host_toolchain) {
  lsp_benchmark_build_cases = [
    "lsp_start_perf",
    "lsp_get_definition_at_position_perf",
    "lsp_find_rename_locations_perf",
    "lsp_to_line_column_offset_perf",
    "lsp_get_completion_at_position_perf",
    "lsp_get_document_high_lights_perf",
    "lsp_get_formatting_edits_perf",
    "lsp_get_offset_by_col_and_line_perf",
    "lsp_get_organize_imports_perf",
    "lsp_get_quick_info_at_position_perf",
    "lsp_get_references_at_position_perf",
    "lsp_get_rename_info_perf",
    "lsp_refactor_extract_symbol_perf",
    "lsp_get_implementation_location_perf",
    "lsp_get_syntactic_diagnostics_perf",
    "lsp_get_semantic_diagnostics_perf",
    "lsp_get_safe_delete_info_perf",
    "lsp_get_current_token_value_perf",
  ]

  lsp_benchmark_build_sources = {
    lsp_start_perf = "src/start_perf.cpp"
    lsp_get_definition_at_position_perf = "src/get_definition_at_position_perf.cpp"
    lsp_find_rename_locations_perf = "src/find_rename_locations_perf.cpp"
    lsp_to_line_column_offset_perf = "src/to_line_column_offset_perf.cpp"
    lsp_get_completion_at_position_perf = "src/get_completion_at_position_perf.cpp"
    lsp_get_document_high_lights_perf = "src/get_document_high_lights_perf.cpp"
    lsp_get_formatting_edits_perf = "src/get_formatting_edits_perf.cpp"
    lsp_get_offset_by_col_and_line_perf = "src/get_offset_by_col_and_line_perf.cpp"
    lsp_get_organize_imports_perf = "src/get_organize_imports_perf.cpp"
    lsp_get_quick_info_at_position_perf = "src/get_quick_info_at_position_perf.cpp"
    lsp_get_references_at_position_perf = "src/get_references_at_position_perf.cpp"
    lsp_get_rename_info_perf = "src/get_rename_info_perf.cpp"
    lsp_refactor_extract_symbol_perf = "src/refactor_extract_symbol_perf.cpp"
    lsp_get_implementation_location_perf = "src/get_implementation_location_perf.cpp"
    lsp_get_syntactic_diagnostics_perf = "src/get_syntactic_diagnostics_perf.cpp"
    lsp_get_semantic_diagnostics_perf = "src/get_semantic_diagnostics_perf.cpp"
    lsp_get_safe_delete_info_perf = "src/get_safe_delete_info_perf.cpp"
    lsp_get_current_token_value_perf = "src/get_current_token_value_perf.cpp"
  }

  foreach(case_name, lsp_benchmark_build_cases) {
    ets2panda_lsp_benchmark_executable("${case_name}_build") {
      sources = [ lsp_benchmark_build_sources[case_name] ]
      output_name = case_name
    }
    lsp_benchmark_build_deps += [ ":${case_name}_build" ]
  }
}

group("lsp_benchmark_build") {
  deps = lsp_benchmark_build_deps
}
